[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Bone.png" type="Texture" id=1]
[ext_resource path="res://Monsters/Leg.gd" type="Script" id=2]
[ext_resource path="res://Hitboxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
height = 30.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 34.0

[node name="Leg" type="Position2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 19, 0 )
rotation = 1.5708
scale = Vector2( 1, 0.600001 )
texture = ExtResource( 1 )

[node name="Joint1" type="Position2D" parent="."]
position = Vector2( 38, 0 )

[node name="Sprite" type="Sprite" parent="Joint1"]
position = Vector2( 20, 0 )
rotation = 1.5708
scale = Vector2( 1, 0.640001 )
texture = ExtResource( 1 )

[node name="Joint2" type="Position2D" parent="Joint1"]
position = Vector2( 30, 0 )

[node name="Sprite" type="Sprite" parent="Joint1/Joint2"]
position = Vector2( 48, 0 )
rotation = 1.5708
scale = Vector2( 1, 1.2 )
texture = ExtResource( 1 )

[node name="Hand" type="Position2D" parent="Joint1/Joint2"]
position = Vector2( 87, 0 )

[node name="HitBox" parent="Joint1/Joint2" instance=ExtResource( 3 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Joint1/Joint2/HitBox" index="0"]
position = Vector2( 72, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Hurtbox" parent="Joint1" instance=ExtResource( 4 )]
position = Vector2( -38, 0 )
collision_layer = 8

[node name="CollisionShape2D" parent="Joint1/Hurtbox" index="0"]
position = Vector2( 57, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 10

[connection signal="area_entered" from="Joint1/Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Joint1/Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Joint1/Joint2/HitBox"]
[editable path="Joint1/Hurtbox"]
